--- a/HalloDoc Project/Views/Admin/EncounterForm.cshtml
+++ b/HalloDoc Project/Views/Admin/EncounterForm.cshtml
@@ -195,9 +195,10 @@
                     <label for="floatingInput" class="input_labels ms-2">Follow Up</label>
                 </div>
             </div>
-            <div class="d-grid gap-2 d-flex justify-content-center  justify-content-md-end mt-4 pt-4 mb-3">
-                <button class="btn btn-info me-md-2 text-white fw-bold mb-3" type="submit">Submit</button>
-                <button class="btn btn-outline-info fw-bold mb-3" type="reset">Cancel</button>
+            <div class="text-end">
+                <a class="btn-success btn" asp-action="FinalizeDownload" asp-controller="Admin" asp-route-requestid="@Model.requestId" type="button">Finalize</a>   
+                <button class="btn btn-info text-white" type="submit">Submit</button>
+                <button class="btn btn-danger" type="reset">Cancel</button>
             </div>
 
         </div>
