--- a/HalloDoc Project/Views/Admin/SendOrders.cshtml
+++ b/HalloDoc Project/Views/Admin/SendOrders.cshtml
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col my-4 d-flex justify-content-between ">
             <h2>Send Order</h2>
-            <button type="button" class="btn btn-outline-info">
+            <button type="button" class="btn btn-outline-info" onclick="history.back()">
                 <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24" fill="currentColor">
                     <path d="m142-480 294 294q15 15 14.5 35T435-116q-15 15-35 15t-35-15L57-423q-12-12-18-27t-6-30q0-15 6-30t18-27l308-308q15-15 35.5-14.5T436-844q15 15 15 35t-15 35L142-480Z" />
                 </svg>
@@ -31,10 +31,7 @@
             <div class="col-md-6 col-12 form-floating temp mt-3" >
                 <select class="form-select" asp-for="business" id="SelectBusiness">
                     <option value="0" selected disabled>Select Business</option>
-                    @for (int i = 0; i < Model.healthprofessionals.Count; i++)
-                    {
-                        <option value="@Model.healthprofessionals[i].Vendorid">@Model.healthprofessionals[i].Vendorname</option>
-                    }
+                    
                 </select>
                 <label for="floatingSelectGrid" class="input_labels ms-2">Select Business</label>
             </div>
@@ -97,7 +94,7 @@
 
                     $('#SelectBusiness').append($('<option>', {
                         value: 0,
-                        text: '-- Select Business --',
+                        text: '-Select Business-',
                         selected: true,
                         disabled: true
                     }));
