--- a/HalloDoc Project/Views/Admin/ActiveTable.cshtml
+++ b/HalloDoc Project/Views/Admin/ActiveTable.cshtml
@@ -172,6 +172,24 @@
 
         </tbody>
     </table>
+    <nav aria-label="Page navigation example">
+        <ul class="pagination">
+            @if (Model.currentPage == 1)
+            {
+                <li class="page-item"><button type="button" disabled onclick="loadPreviousPage(@Model.currentPage)" class="text-muted page-link" href="#">Previous</button></li>
+            }
+            @if (Model.currentPage > 1)
+            {
+                <li class="page-item"><button type="button" onclick="loadPreviousPage(@Model.currentPage)" class="page-link" href="#">Previous</button></li>
+
+            }
+            <li class="page-item"><span class="page-link" href="#">@Model.currentPage</span></li>
+            @if (Model.currentPage != (int)Math.Ceiling((double)Model.pending / 5))
+            {
+                <li class="page-item"><button type="button" onclick="loadNextPage(@Model.currentPage)" class="page-link" id="">Next</button></li>
+            }
+        </ul>
+    </nav>
     @* ---------------------------------------------------------------------------- *@
     @* accordion *@
     <div class="shadow-lg d-md-none d-block">
