--- a/HalloDoc Project/Views/Admin/CreateRequestAdminDashboard.cshtml
+++ b/HalloDoc Project/Views/Admin/CreateRequestAdminDashboard.cshtml
@@ -6,19 +6,13 @@
     <div class="mx-auto pt-3 mb-3 container-sm" id="secondDiv">
         <div class="backbtn d-flex justify-content-between px-3">
             <h4 class="text-body my-auto">Submit Information</h4>
-            <a onclick="history.back()"
+            <button onclick="history.back()"
                class="p-2 border text-decoration-none border-info rounded bg-transparent">
-                <svg xmlns="http://www.w3.org/2000/svg"
-                     width="16"
-                     height="16"
-                     fill="currentColor"
-                     class="bi bi-chevron-left"
-                     viewBox="0 0 16 16">
-                    <path fill-rule="evenodd"
-                          d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0" />
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill=#10bce9 class="bi bi-arrow-return-left" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M14.5 1.5a.5.5 0 0 1 .5.5v4.8a2.5 2.5 0 0 1-2.5 2.5H2.707l3.347 3.346a.5.5 0 0 1-.708.708l-4.2-4.2a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 8.3H12.5A1.5 1.5 0 0 0 14 6.8V2a.5.5 0 0 1 .5-.5" />
                 </svg>
                 <span class="mx-2 text-info">Back</span>
-            </a>
+            </button>
         </div>
 
         <div id="FormOfPatientRequest" class="container-sm mt-3 p-3 gx-4 mb-3 shadow">
@@ -131,7 +125,7 @@
                             <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
                                 <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10m0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6" />
                             </svg>
-                            <span class="fs-6"> Map</span>
+                            <span class="fs-6">Map</span>
                         </button>
                     </div>
 
