--- a/HalloDoc Project/Views/Admin/AdminDashboard.cshtml
+++ b/HalloDoc Project/Views/Admin/AdminDashboard.cshtml
@@ -203,8 +203,8 @@
                 </svg>
                 <span class="ms-1 d-md-block d-none text-white">Create Request</span>
             </a>
-            <form asp-action="ExportToExcel" asp-controller="Admin" method="post">
-                <button type="submit" id="ExportButton" class="mx-1 px-2 py-1 btn btn-primary" style="background-color:#10bce9">
+            <form method="post">
+                <button type="button" id="ExportButton" class="mx-1 px-2 py-1 btn btn-primary" style="background-color:#10bce9">
                     <svg width="25px" height="25px" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" fill="white"
                          class="bi bi-reply">
                         <path transform="scale(-1, 1) translate(-20,0)"
@@ -213,8 +213,8 @@
                     <span class="ms-1 d-md-block d-none text-white">Export</span>
                 </button>
             </form>
-            <form asp-action="ExportToExcel" asp-controller="Admin" method="post">
-                <button type="submit" class="mx-1 px-2 py-1 btn btn-primary" style="background-color:#10bce9">
+            <form method="post">
+                <button type="button" id="ExportAllButton" class="mx-1 px-2 py-1 btn btn-primary" style="background-color:#10bce9">
                     <svg width="25px" height="25px" viewBox="0 0 20 20" fill="white">
                         <path transform="scale(-1, 1) translate(-20,0)"
                               d="M6.598 5.013a.144.144 0 0 1 .202.134V6.3a.5.5 0 0 0 .5.5c.667 0 2.013.005 3.3.822.984.624 1.99 1.76 2.595 3.876-1.02-.983-2.185-1.516-3.205-1.799a8.74 8.74 0 0 0-1.921-.306 7.404 7.404 0 0 0-.798.008h-.013l-.005.001h-.001L7.3 9.9l-.05-.498a.5.5 0 0 0-.45.498v1.153c0 .108-.11.176-.202.134L2.614 8.254a.503.503 0 0 0-.042-.028.147.147 0 0 1 0-.252.499.499 0 0 0 .042-.028l3.984-2.933zM7.8 10.386c.068 0 .143.003.223.006.434.02 1.034.086 1.7.271 1.326.368 2.896 1.202 3.94 3.08a.5.5 0 0 0 .933-.305c-.464-3.71-1.886-5.662-3.46-6.66-1.245-.79-2.527-.942-3.336-.971v-.66a1.144 1.144 0 0 0-1.767-.96l-3.994 2.94a1.147 1.147 0 0 0 0 1.946l3.994 2.94a1.144 1.144 0 0 0 1.767-.96v-.667z" />
@@ -709,7 +709,6 @@
 
 </script>
 <script>
-
     var pageNo = 1;
     var dashboardStatus = 0;
     var type_filter = 0;
@@ -726,19 +725,19 @@
         LoadPartialTables(currentpage - 1);
     }
 
-    $('#ExportButton').onclick("click", function () {
-        $.ajax({
-            url: '/Admin/ExportToExcel',
-            type: 'POST',
-            data: { dashboardStatus:dashboardStatus, page: pageNo, region: region_filter, search: search_filter, type: type_filter },
-            success: function (data) {
-                $("#partial").html(data);
-            },
-            error: function (error) {
-                alert('ExportError');
-            }
-        });
-    });
+    // $('#ExportButton').onclick("click", function () {
+    //     $.ajax({
+    //         url: '/Admin/ExportToExcel',
+    //         type: 'POST',
+    //         data: { dashboardStatus:dashboardStatus, page: pageNo, region: region_filter, search: search_filter, type: type_filter },
+    //         success: function (data) {
+    //             $("#partial").html(data);
+    //         },
+    //         error: function (error) {
+    //             alert('ExportError');
+    //         }
+    //     });
+    // });
 
     $("#searchBtn").on("keydown", function (e) {
         if (e.code === "Enter") 
@@ -770,6 +769,7 @@
 
         if (id == 'status-new-tab') {
             dashboardStatus = 1;
+            status = 1;
             $('#status-text').text('(New)');
             $("#status-text").css("color", "#203f9a");
         }
@@ -986,9 +986,70 @@
     });
 
 </script>
+
 <script>
+    
+    $('#ExportButton').click( function () {
 
+        console.log( "status : " + dashboardStatus);
 
+        $.ajax({
+            url: '/Admin/ExportToExcel',
+            type: 'POST',
+            data: { status: dashboardStatus, page: pageNo, region: region_filter, search: search_filter, type: type_filter },
+            success: function (data) {
+
+                console.log('success');
+                var link = document.createElement('a');
+
+                link.href = "data:application/octet-stream;base64," + data;
+                link.target = '_blank';
+                link.download = 'Requestdata.xlsx';
+                link.click();
+            },
+            error: function (error) {
+                alert('ExportError');
+            }
+        });
+
+    });
+    $('#ExportAllButton').click(function () {
+
+        console.log("status : " + dashboardStatus);
+
+        $.ajax({
+            url: '/Admin/ExportAllToExcel',
+            type: 'POST',
+            data: { status: dashboardStatus},
+            success: function (data) {
+                console.log('success');
+                var link = document.createElement('a');
+
+                link.href = "data:application/octet-stream;base64," + data;
+                link.target = '_blank';
+                link.download = 'AllRequestData.xlsx';
+                link.click();
+            },
+            error: function (error) {
+                alert('ExportError');
+            }
+        });
+    });
+    $('#FinalizePDF').click(function () {
+        $.ajax({
+            url: '/Admin/ExportAllToExcel',
+            type: 'POST',
+            data: { status: dashboardStatus },
+            success: function (data) {
+                console.log("success");
+            },
+            error: function (error) {
+                alert('ExportError');
+            }
+        });
+    })
+</script>
+<script>
     $('.admin-tab').removeClass('active-tab');
     $('#dashboard-tab').addClass('active-tab');
 </script>
